# gravity

./: .dockerignore  .gitignore  docker-compose.yml
backend/: .dockerignore  Cargo.toml  Dockerfile
backend/.sqlx/: config.toml
backend/migrations/: 001_create_projects.sql  002_create_files.sql  003_create_functions.sql  004_create_dependencies.sql  005_create_complexities.sql
backend/src/: api.rs  complexity.rs  db.rs  graph.rs  main.rs  models.rs  parser.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: app.rs  main.rs
sample_project/src/: main.rs
