[package]
name = "gravity-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gravity-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }

# IDs
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Parsing
tree-sitter = "0.22"
tree-sitter-rust = "0.21"

# Graph
petgraph = { version = "0.6", features = ["serde-1"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Environment
dotenvy = "0.15"

# File system
walkdir = "2"

[build-dependencies]
# nothing needed beyond standard

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
