[package]
name = "gravity-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "HtmlElement",
    "console",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.5", features = ["http"] }
console_error_panic_hook = "0.1"
gloo-utils = "0.2"
uuid = { version = "1", features = ["serde", "js"] }
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3"

[profile.release]
opt-level = "z"
lto = true
